タスク12の変更点

--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -65,13 +65,18 @@ input {
 }
 
 /* ここから追加 */
+.search{
+	display: flex;
+	justify-content:space-between;
+}
+	
+
 .search_box {
     position: relative;
     margin-left: -5px;
 }
 
 .search1 {
-    border-radius: 20px 0 0 20px;
     font-size: 15px;
     width: 325px;
     padding: 4px 10px;
@@ -83,6 +88,7 @@ input {
 }
 
 .search_box:after {
+	display: inline-block;
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
     content: "\f002";
